Added --lightweight flag to tracer wrapper

--- a/opencl/tracer_opencl.sh.template
+++ b/opencl/tracer_opencl.sh.template
@@ -6,6 +6,7 @@ lttng enable-channel --userspace --blocking-timeout=inf blocking-channel
 lttng enable-event --channel=blocking-channel --userspace lttng_ust_opencl:*
 while true; do
   case "$1" in
+    -l | --lightweight ) shift; lttng disable-event --channel=blocking-channel --userspace lttng_ust_opencl:clSetKernelArg*; lttng disable-event --channel=blocking-channel --userspace lttng_ust_opencl:clGetKernelArg*; lttng disable-event --channel=blocking-channel --userspace lttng_ust_opencl:clSetKernelExecInfo;;
     -p | --profiling ) shift; lttng enable-event --channel=blocking-channel --userspace lttng_ust_opencl_profiling:*;;
     -s | --source ) shift; lttng enable-event --channel=blocking-channel --userspace lttng_ust_opencl_source:* ;;
     -a | --arguments ) shift; lttng enable-event --channel=blocking-channel --userspace lttng_ust_opencl_arguments:*;;
