--- a/ze/tracer_ze.sh.template
+++ b/ze/tracer_ze.sh.template
@@ -7,7 +7,7 @@ while true; do
   esac
 done
 lttng-sessiond --daemonize --quiet
-if [ ! -z "lttng_view" ]
+if [ ! -z "$lttng_view" ]
 then
   lttng-relayd --daemonize
   lttng create my-userspace-ze-session --live
