Removed warning in some configurations.

--- a/ze/Makefile
+++ b/ze/Makefile
@@ -21,7 +21,7 @@ ZE_MODEL = ze_model.rb yaml_ast.rb ze_meta_parameters.yaml zet_meta_parameters.y
 
 all: tracer_ze.so ze_library.rb babeltrace_ze_lib.rb
 
-LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Werror -O3 -I./ -I./include/core -I./include/tools -I../utils/
+LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-nonnull -Werror -O3 -I./ -I./include/core -I./include/tools -I../utils/
 
 modified_include: include headers.patch
 	cp -r include/ modified_include/
