Added bare-bone babeltrace plugin implementation.

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -6,7 +6,7 @@ OPENCL_PROBES_INCL = $(OPENCL_PROBES:=.h)
 OPENCL_PROBES_SRC = $(OPENCL_PROBES:=.c)
 ML_FILES = opencl_meta_parameters.yaml supported_extensions.yaml supported_enums.yaml
 
-all: tracer_opencl.so opencl_model.yaml
+all: tracer_opencl.so opencl_model.yaml babeltrace_cl.so
 
 LTTNG_FLAGS=-fPIC -g -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare -Werror -O3 -I./ -I../utils/ -I./include/
 
@@ -49,6 +49,9 @@ tracer_opencl.c: gen_opencl.rb opencl_model.rb $(ML_FILES) cl.xml.patched tracer
 tracer_opencl.so: ../utils/lttng/tracepoint_gen.h tracer_opencl.c $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL)
 	gcc -g -O3 -Wall -Wextra -Werror -I./ -I../utils/ -I./include/ -o tracer_opencl.so -shared -fPIC -Wl,--version-script,tracer_opencl.map tracer_opencl.c $(OPENCL_PROBES_OBJS) -llttng-ust -ldl -lffi
 
+babeltrace_cl.so: babeltrace_cl.c
+	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ $(shell pkg-config --cflags babeltrace2) -o babeltrace_cl.so -shared -fPIC babeltrace_cl.c $(shell pkg-config --libs babeltrace2)
+
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) cl.xml.patched opencl_model.yaml
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) cl.xml.patched opencl_model.yaml
 	$(MAKE) -C ../utils clean
