Split callback declarations.

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -49,12 +49,15 @@ tracer_opencl.c: gen_opencl.rb opencl_model.rb $(ML_FILES) cl.xml.patched tracer
 tracer_opencl.so: ../utils/lttng/tracepoint_gen.h tracer_opencl.c $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL)
 	gcc -g -O3 -Wall -Wextra -Werror -I./ -I../utils/ -I./include/ -o tracer_opencl.so -shared -fPIC -Wl,--version-script,tracer_opencl.map tracer_opencl.c $(OPENCL_PROBES_OBJS) -llttng-ust -ldl -lffi
 
+babeltrace_cl_callbacks.h: gen_babeltrace_cl_callbacks.rb opencl_model.yaml
+	ruby gen_babeltrace_cl_callbacks.rb > babeltrace_cl_callbacks.h
+
 babeltrace_cl_dispatchers.c: gen_babeltrace_cl_dispatchers.rb opencl_model.yaml
 	ruby gen_babeltrace_cl_dispatchers.rb > babeltrace_cl_dispatchers.c
 
-babeltrace_cl.so: babeltrace_cl.c babeltrace_cl.h babeltrace_cl_dispatchers.c tracer_opencl.h
+babeltrace_cl.so: babeltrace_cl.c babeltrace_cl.h babeltrace_cl_dispatchers.c tracer_opencl.h babeltrace_cl_callbacks.h
 	gcc -g -O3 -Wall -Wextra -Wno-unused-parameter -Werror -I./ -I../utils/ -I./include/ $(shell pkg-config --cflags babeltrace2) -o babeltrace_cl.so -shared -fPIC -DHASH_DEBUG=1 babeltrace_cl.c babeltrace_cl_dispatchers.c $(shell pkg-config --libs babeltrace2)
 
 clean:
-	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c cl.xml.patched opencl_model.yaml
+	rm -f tracer_opencl.c tracer_opencl.h tracer_opencl.so babeltrace_cl.so *.tp $(OPENCL_PROBES_OBJS) $(OPENCL_PROBES_INCL) $(OPENCL_PROBES_SRC) babeltrace_cl_dispatchers.c babeltrace_cl_callbacks.h cl.xml.patched opencl_model.yaml
 	$(MAKE) -C ../utils clean
